--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
   <title>Lists Lab</title>
 </head>
 <body>
-
+  <ul>
+    <li>Ham and Cheese</li>
+    <li>Grilled Cheese</li>
+    <li>Nacho Cheese French Fries</li>
+    <li>Cheese soup</li>
+    <li>Cheese and crackers</li>
+    <li>Sushi</li>
+  </ul>
   <!-- Write your HTML in this file -->
 
 </body>
