--- a/index.html
+++ b/index.html
@@ -13,6 +13,30 @@
     <li>Sushi</li>
   </ul>
   <!-- Write your HTML in this file -->
-
+  <ul>
+    <li>Sandwiches
+      <ul>
+        <li>Ham and Cheese</li>
+        <li>Grilled Cheese</li>
+      </ul>
+    </li>
+    <li>Snacks
+      <ul>
+        <li>Nacho Cheese French Fries</li>
+        <li>Cheese and crackers</li>
+      </ul>
+    </li>
+    <li>Soups
+      <ul>
+        <li>Cheese soup</li>
+      </ul>
+    </li>
+    <li>Sushi
+      <ul>
+        <li>Spicy Salmon Rolls</li>
+        <li>California Rolls</li>
+      </ul>
+    </li>
+  </ul>
 </body>
 </html>
